--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <div id='dummy-container-t-r'></div>
     <div id='dummy-container-t-l'></div>
     <div id='container'>
-      <img id='dot_1' class='dot' src='img/dot.png'>
+      <img id='dot_1' src='img/dot.png'>
     </div>
 
   </body>
